# xiaoyi-rag-service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: build_index.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  documents.py  health.py  search.py
src/indexing/: __init__.py  chunker.py  pipeline.py
src/models/: __init__.py  common.py  document.py  search.py
src/retrieval/: __init__.py  bm25.py  embedding.py  hybrid.py  reranker.py
src/storage/: __init__.py  qdrant.py
