[project]
name = "xiaoyi-rag-service"
version = "0.1.0"
description = "研报知识库检索服务 - 为 xiaoyi 提供高质量的研报检索能力"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tianyu", email = "tianyuc@buaa.edu.cn" }]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # 向量数据库
    "qdrant-client>=1.7.0",
    
    # Embedding & Reranker
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    
    # ModelScope (国内模型下载)
    "modelscope>=1.10.0",
    
    # PDF 解析 (默认使用 PyMuPDF，轻量快速)
    "pymupdf>=1.24.0",
    
    # 文本处理
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    
    # 数据处理
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    
    # 工具
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# MinerU 高质量 PDF 解析（复杂布局）
# 安装: uv pip install -e ".[mineru]" --prerelease=allow
mineru = [
    "magic-pdf[full]>=1.3.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
